Show meaning h1 and word in p tag

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 
 <body style="width: 100%">
     <div style="width: 100%;" align="center">
-        <h1 id="word"></h1>
-        <p id="meaning"></p>
+        <h1 id="meaning"></h1>
+        <p id="word"></p>
         <button id="button" onClick="updateWord()">New Word!!!</button>
     </div>
     <div>
         <ol id="selected-words-list">
         </ol>
     </div>
-    
 </body>
 <script src="./index.js"></script>
 
