Update index.js to use the new App class

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <button id="submit">Submit</button>
     </div>
 </body>
-<script src="./index.js"></script>
+
+<script src="./js/data.js"></script>
+<script src="./js/utils.js"></script>
+<script src="./js/WordSelector.js"></script>
+<script src="./js/WordsInput.js"></script>
+<script src="./js/App.js"></script>
+<script src="./js/index.js"></script>
 
 </html>
