Remove unnecessary styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ol>
         </div>
     </div>
-    <div id="words-input-div" style="position:fixed; width: 100%;" align="center">
+    <div id="words-input-div" style="width: 100%;" align="center">
         <textarea id="input" style="height: 50vh; width: 80%;"></textarea>
         <br />
         <button id="submit">Submit</button>
