Reset body margin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body style="width: 100%">
+<body style="width: 100%; margin: 0;">
     <h1>Random Word Selector</h1>
     <div id="words-div" style="width: 100%;">
         <div id="current-words-div" style="width: 100%;" align="center">
