--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Random word selector</title>
 </head>
 
 <body style="width: 100%; margin: 0;">
@@ -22,7 +22,15 @@
         </div>
     </div>
     <div id="words-input-div" style="width: 100%;" align="center">
-        <textarea id="input" style="height: 50vh; width: 80%;"></textarea>
+        <input id="input-source-static" name="data-source" type="radio" checked><strong>Static list</strong></input>
+        <br />
+        <div id="static-list">
+            <textarea id="input" style="height: 50vh; width: 80%;"></textarea>
+        </div>
+        <br />
+        <div id="settings" style="width: 80%;">
+            <input id="setting-display-meaning" type="checkbox" checked>Display Meaning of current word</input>
+        </div>
         <br />
         <button id="submit">Submit</button>
     </div>
