Use basic html file for react

--- a/index.html
+++ b/index.html
@@ -9,38 +9,10 @@
 </head>
 
 <body style="width: 100%; margin: 0;">
-    <h1>Random Word Selector</h1>
-    <div id="words-div" style="width: 100%;">
-        <div id="current-words-div" style="width: 100%;" align="center">
-            <h2 id="meaning"></h2>
-            <p id="word"></p>
-            <button id="button"">New Word!!!</button>
-        </div>
-        <div id=" selected-words-div">
-                <ol id="selected-words-list">
-                </ol>
-        </div>
-    </div>
-    <div id="words-input-div" style="width: 100%;" align="center">
-        <input id="input-source-static" name="data-source" type="radio" checked><strong>Static list</strong></input>
-        <br />
-        <div id="static-list">
-            <textarea id="input" style="height: 50vh; width: 80%;"></textarea>
-        </div>
-        <br />
-        <div id="settings" style="width: 80%;">
-            <input id="setting-display-meaning" type="checkbox" checked>Display Meaning of current word</input>
-        </div>
-        <br />
-        <button id="submit">Submit</button>
-    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 </body>
 
-<script src="./js/data.js"></script>
-<script src="./js/utils.js"></script>
-<script src="./js/WordSelector.js"></script>
-<script src="./js/WordsInput.js"></script>
-<script src="./js/App.js"></script>
-<script src="./js/index.js"></script>
+<script src="/dist/main.js"></script>
 
 </html>
