--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Random word selector</title>
 </head>
 
-<body style="width: 100%; margin: 0;">
+<body style="width: 100%; margin: 0;" class="bg-gradient-to-r from-green-400 to-blue-500">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
